--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "furnit-frontend",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:4000",
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.4.0",
